objects/CSS_WS_Fail_Mode_Catalog__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Fail Mode Catalog</description>
    <fields>
        <fullName>CSS_WS_Active__c</fullName>
        <description>Active Indicator</description>
        <label>CSS_WS_Active</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_FailMode__c</fullName>
        <description>Failure Mode</description>
        <label>CSS_WS_FailMode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Name__c</fullName>
        <description>Failure Mode Name</description>
        <label>CSS_WS_Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>CSS_WS_Fail_Mode_Catalog</label>
</CustomObject>